--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,6 +33,7 @@ layout: main
         </div>
       </div>
       {% include disqus.html %}
+      {% include analytics.html %}
     </div> <!-- End Wrap Content -->
   </div> <!-- End Page Content -->
 </article> <!-- End Article Page -->
